fixed flex-wrap

--- a/task_11/css/style.css
+++ b/task_11/css/style.css
@@ -366,7 +366,6 @@ input[type="range"]::after {
 .document-type-select .radio-row {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     justify-content: space-between;
 }
 
